app/assets/stylesheets/hnhiring.css.scss
$green: #18bc9c;

@media (max-width: 768px) {
  .show-large {
    display: none;
  }
}

body {
  overflow-x: hidden;
}

br {
  content: " ";
  display: block;
  margin: 0.5em;
}

p {
  margin-top: 15px;
  margin-bottom: 15px;
}

p.small {
  font-size: 16px;
}

a,
a:hover,
a:focus,
a:active,
a.active {
  outline: 0;
  color: $green;
}

.navbar {
  background: #2c3e50;
  font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.navbar .navbar-header {
  width: 100%;
  padding: 5px 0;
}

.navbar .navbar-header a {
  color: white;
  text-decoration: none !important;

  &:hover {
    color: $green;
    text-decoration: underline !important;
  }
}

.navbar a:focus {
  outline: 0;
}

.navbar .navbar-nav {
  letter-spacing: 1px;
}

.navbar .navbar-nav li a:focus {
  outline: 0;
}

.navbar-default,
.navbar-inverse {
  border: 0;
}

.odd {
  background: #d9edf7;
}

ul.comments {
  list-style: none;
  padding: 0;
  font-size: 20px;
  margin-bottom: 20px;
}

li.comment {
  margin: 0;
  padding: 25px 5px 15px;
}

li.comment a {
  overflow-wrap: break-word;
  word-wrap: break-word;

  -ms-word-break: break-all;
  /* This is the dangerous one in WebKit, as it breaks things wherever */
  word-break: break-all;
  /* Instead use this non-standard one: */
  word-break: break-word;

  /* Adds a hyphen where the word breaks, if supported (No Blink) */
  -ms-hyphens: auto;
  -moz-hyphens: auto;
  -webkit-hyphens: auto;
  hyphens: auto;
}

.user a {
  text-decoration: underline;
  color: $green;
  font-weight: bold;
}

.user .date {
  color: #767676;
}

code {
  white-space: pre-line;
}

.title, .filter {
  color: white;
  font-size: 16px;
  margin-top: 7px;
}

.filter {
  color: black;
  font-size: 12px;
  margin-left: 7px;
  margin-top: 2px;
}

.title a {
  color: white;
  text-decoration: none;
  color: #27B33C;
}

.title a:hover {
  text-decoration: underline;
}

.highlight {
  background-color: yellow;
}

.left {
  float: left;
}

.right {
  float: right;
}

.hidden, .reply {
  display: none;
}

.green {
  color: $green;
}

.hire-me {
  position: fixed;
  left: 10px;
  bottom: -10px;
  font-size: 24px;
  padding: 20px 40px;

  a {
    color: #8a6d3b;
  }
}

.page-title {
  margin-top: 30px;
  color: #424242;
}

.page-title a {
  color: #424242;
}

.page-subtitle {
  color: #767676;
  font-size: 20px;
}

.center {
  text-align: center;
}

.next-button {
  margin-top: 40px;
  margin-bottom: 40px;
}

.next-button a.btn {
  color: $green;
  border-color: $green;
  width: 90%;
  max-width: 500px;
  font-size: 18px;
  padding: 10px 20px;
}

.next-button a.btn:hover {
  background-color: #e0f2f1
}

